Refactored the OAuth2Authorization, configured the base Active object for plugin storage MSConfig